--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==7.1.2
 clickclick==1.2.2
 connexion==2.7.0
 Flask==1.1.1
+Flask-SQLAlchemy==2.4.1
 idna==2.9
 importlib-metadata==1.6.0
 inflection==0.4.0
@@ -17,6 +18,7 @@ pyrsistent==0.16.0
 PyYAML==5.3.1
 requests==2.23.0
 six==1.14.0
+SQLAlchemy==1.3.17
 urllib3==1.25.9
 Werkzeug==1.0.1
 zipp==3.1.0
