--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.2
 attrs==19.3.0
 certifi==2020.4.5.1
 chardet==3.0.4
@@ -5,6 +6,7 @@ click==7.1.2
 clickclick==1.2.2
 connexion==2.7.0
 Flask==1.1.1
+Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 idna==2.9
 importlib-metadata==1.6.0
@@ -12,9 +14,12 @@ inflection==0.4.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
+Mako==1.1.2
 MarkupSafe==1.1.1
 openapi-spec-validator==0.2.8
 pyrsistent==0.16.0
+python-dateutil==2.8.1
+python-editor==1.0.4
 PyYAML==5.3.1
 requests==2.23.0
 six==1.14.0
