--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 alembic==1.4.2
 attrs==19.3.0
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
 clickclick==1.2.2
 connexion==2.7.0
+cryptography==2.9.2
+ecdsa==0.15
 Flask==1.1.1
 flask-marshmallow==0.12.0
 Flask-Migrate==2.5.3
@@ -20,12 +23,16 @@ MarkupSafe==1.1.1
 marshmallow==3.6.0
 marshmallow-sqlalchemy==0.23.0
 openapi-spec-validator==0.2.8
+pyasn1==0.4.8
+pycparser==2.20
 PyMySQL==0.9.3
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-editor==1.0.4
+python-jose==3.1.0
 PyYAML==5.3.1
 requests==2.23.0
+rsa==4.0
 six==1.14.0
 SQLAlchemy==1.3.17
 swagger-ui-bundle==0.0.6
